--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-hook-form": "^7.30.0"
+    "react-hook-form": "^7.30.0",
+    "react-spotify-auth": "^1.4.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.27",
