--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.11",
     "firebase-functions": "^3.20.1",
     "next": "12.1.5",
