--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "firebase": "^9.6.11",
     "firebase-functions": "^3.20.1",
     "next": "12.1.5",
+    "query-string": "^7.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.30.0",
-    "react-spotify-auth": "^1.4.3"
+    "react-spotify-auth": "^1.4.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.27",
