--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "@types/uuid": "^8.3.4",
     "firebase-admin": "^10.0.2",
